# smpl

./: .gitignore
books/Python Playground 2e/Intro/: write.py
elf/reloc/: Makefile  README  ml_main.c
gl/cgfs/: CMakeLists.txt  cgfs.cc  cgfs.hh  main.cc
gl/first-glfw-glad/: CMakeLists.txt  main.cc  max-vertex-attrib.cc  two-triangles-with-different-colors.cc
gl/learn-opengl-book/01-to-05-glfw-glad/: .gitignore  CMakeLists.txt  draw-rect.cc  main.cc  max-vertex-attrib.cc  two-triangles-with-EBO.cc  two-triangles-with-different-VAOs-and-VBOs.cc  two-triangles-with-different-colors.cc  two-triangles-without-EBO.cc
gl/learn-opengl-book/06-try-epoxy/: fragment.glsl  more-attributes-with-shad.cc  more-attributes.cc  vertex.glsl
gl/learn-opengl-book/07-textures/: CMakeLists.txt  ex7.3_textures.cc  fragment.glsl  fragment_combined.glsl  fragment_combined_mix.glsl  fragment_face_wrapping.glsl  textures.cc  textures_combined.cc  textures_combined_mix.cc  textures_combined_orig.cc  textures_exercise3_orig.cc  textures_wrapping.cc  vertex_face_wrapping.glsl
gl/learn-opengl-book/glad-opengl3.3-no-ext/include/glad/: glad.h
gl/learn-opengl-book/glad-opengl3.3-no-ext/src/: glad.c
gl/learn-opengl-book/libshad/: shader.cc
gl/learn-opengl-book/libshad/include/libshad/: shader.hh
gl/learn-opengl-book/template/: CMakeLists.txt  main.cc
gl/libshad/: CMakeLists.txt  shader.cc
gl/libshad/include/libshad/: shader.hh
gl/second-try-epoxy/: CMakeLists.txt  send-vec4-from-vs-to-fs.cc  uniform-in-fs.cc
